# FixAgent

./: .dockerignore  .gitmodules  .reviewagent.toml  README.md  docker-compose.yml  env  orchestrator.toml.example
.monkeycode/: MEMORY.md
.monkeycode/docs/: deployment.md
FixAgent/: Cargo.toml  README.md
FixAgent/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  runner.rs
FixAgent/src/agent/: fix.rs  mod.rs  prompt.rs
FixAgent/src/orchestrator/: fix_orchestrator.rs  mod.rs
FixAgent/src/refine/: mod.rs  patch_validator.rs
FixAgent/src/tools/: mod.rs  read_file.rs  search.rs
Orchestrator/: Cargo.toml  Dockerfile  README.md
Orchestrator/src/: cli.rs  config.rs  db.rs  error.rs  git.rs  lib.rs  main.rs  models.rs  service.rs  web.rs
ops/postgres/: init.sql  run-migrations.sh  sync-schema.sh
ops/postgres/migrations/: 001_add_suggestion_code.sql  002_add_commit_sha_to_fix_runs.sql  003_add_status_to_pull_requests.sql
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  CodeDiffViewer.tsx  api.ts  styles.css  types.ts  utils.ts
web/src/styles/: base.css  diff.css  issue-card.css  modals.css  pr-card.css
