[package]
name = "fixagent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fixagent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
schemars = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reviewagent = { path = "../ReviewAgent" }

# Tool dependencies (same as ReviewAgent)
rig-core = "0.31.0"
regex = "1.12.3"
glob = "0.3"
ignore = "0.4"
